# backup

./: README.md  architecture.md.resolved  cube.sdf
src/move_arm_interfaces/: CMakeLists.txt  package.xml
src/move_arm_interfaces/action/: PickPlace.action
src/move_arm_interfaces/srv/: MoveArm.srv  SetPose.srv
src/omx_demos/: omx_log_joint_states.py  omx_traj_demo.py
src/open_manipulator/open_manipulator_bringup/config/: exercise1_controllers.yaml
src/open_manipulator/open_manipulator_bringup/config/open_manipulator_x/: controllers.yaml  hardware_controller_manager.yaml
src/open_manipulator/open_manipulator_bringup/launch/: analyze_arm.py  custom_gazebo.launch.py  open_manipulator_x_gazebo.launch.py
src/open_manipulator/open_manipulator_bringup/worlds/: default_world.sdf  empty_world.sdf
src/open_manipulator/open_manipulator_description/urdf/open_manipulator_x/: open_manipulator_x.urdf.xacro
src/openmanipulator_motion_control/: package.xml  setup.cfg  setup.py
src/openmanipulator_motion_control/openmanipulator_motion_control/: action_client.py  action_server.py  ex10_moveit_quickstart.py  ex11_planning_scene.py  feedback_client.py  feedback_server.py  interactive_mover.py  mover_node.py  pick_and_place_client.py  pick_and_place_server.py  pose_client.py  pose_server.py  service_client.py  service_server.py  spawn_cube.py  task_client.py  task_server.py
src/openmanipulator_x_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/openmanipulator_x_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml  open_manipulator_x.srdf  ros2_controllers.yaml
src/openmanipulator_x_moveit_config/launch/: demo.launch.py  manual.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  simple.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/simple_joint_controller/: CMakeLists.txt  package.xml  simple_joint_controller.xml
src/simple_joint_controller/include/simple_joint_controller/: simple_joint_controller.hpp
src/simple_joint_controller/src/: simple_joint_controller.cpp
